// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header TitleOnly matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "paddingTop": 47,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "paddingBottom": 12,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 12,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#13241C",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          Home
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Header TokenOverrides matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#E6EEE9",
        "paddingTop": 47,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "paddingBottom": 8,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 8,
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#13241C",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          Wallet
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Header WithBack matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "paddingTop": 47,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "paddingBottom": 12,
          "paddingLeft": 24,
          "paddingRight": 24,
          "paddingTop": 12,
        }
      }
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={8}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          accessibilityElementsHidden={true}
          fill="none"
          height={24}
          importantForAccessibility="no-hide-descendants"
          viewBox="0 0 24 24"
          width={24}
        >
          <View
            d="M15 6l-6 6 6 6"
            fill="none"
            stroke="#13241C"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
          />
        </View>
      </View>
      <View
        style={
          {
            "flex": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#13241C",
              "fontFamily": "Inter-Bold",
              "fontSize": 16,
              "lineHeight": 24,
            }
          }
          suppressHighlighting={true}
        >
          Register
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
